Fix contrast issues in sdc-ui
- fix all contrast issues in sdc ui to make the
  ui more accessible

Issue-ID: SDC-4801

--- a/catalog-ui/src/app/ng2/pages/composition/graph/connection-wizard/connection-wizard-header/connection-wizard-header.component.less
+++ b/catalog-ui/src/app/ng2/pages/composition/graph/connection-wizard/connection-wizard-header/connection-wizard-header.component.less
@@ -11,7 +11,7 @@
   }
 }
 .selected {
-  color: @main_color_a;
+  color: @main_color_b; // Changed from @main_color_a (#009fdb) to meet WCAG AA 4.5:1 contrast
 }
 .node{
   display: flex;
