--- a/catalog-ui/src/app/ng2/pages/type-workspace/workspace-menu/workspace-menu.component.less
+++ b/catalog-ui/src/app/ng2/pages/type-workspace/workspace-menu/workspace-menu.component.less
@@ -59,8 +59,8 @@
         }
 
         &.selected {
-            border-left: 4px solid @main_color_a;
-            color: @main_color_a;
+            border-left: 4px solid @main_color_b;
+            color: @main_color_b; // Changed from @main_color_a (#009fdb) to meet WCAG AA 4.5:1 contrast
             margin-left: 18px;
             padding-left: 18px;
             font-weight: 600;
